# nipoppy-custom-pipeline

./: README.md  pyproject.toml
scripts/: bootstrap_nipoppy_project.sh  create_ses_view.sh  preprocess_fs_to_mni_bidsderiv.py
src/simcortexpp/cli/: main.py
src/simcortexpp/configs/initsurf/: generate.yaml
src/simcortexpp/configs/seg/: eval.yaml  inference.yaml  train.yaml
src/simcortexpp/initsurf/: generate.py  paths.py
src/simcortexpp/preproc/: fs_to_mni.py
src/simcortexpp/seg/: eval.py  inference.py  train.py
src/simcortexpp/seg/data/: dataloader.py
src/simcortexpp/seg/models/: unet.py
src/simcortexpp/utils/: tca.py
